kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: online-event-booking-mishal
  labels:
    name: online-event-booking-mishal
