kubernetes/event-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: online-event-booking-mishal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
      - name: event-service
        image: mishal22i1291/event-booking-platform-event-service:latest
        ports:
        - containerPort: 5002
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: online-event-booking-mishal
spec:
  selector:
    app: event-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5002
  type: ClusterIP
