kubernetes/user-service-deployment.yaml
# User Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: online-event-booking-mishal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: mishal22i1291/user-service:latest
        ports:
        - containerPort: 5001
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
---
# User Service
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: online-event-booking-mishal
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: ClusterIP
