kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-booking-ingress
  namespace: online-event-booking-mishal
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    
  rules:
  - host: 
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /events
        pathType: Prefix
        backend:
          service:
            name: event-service
            port:
              number: 80
      - path: /bookings
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 80
      - path: /notifications
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 80
